--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="ModelList\" />
+    <Folder Include="Enums\" />
+    <Folder Include="DTOs\" />
+  </ItemGroup>
+
 </Project>
