--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,8 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ClientOrgins": "",
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "JWTSettings": {
+    "Issuer": "",
+    "Audiences": "",
+    "DurationInMinutes": 15,
+    "Key": ""
+  }
+
+
 }
