--- a/ApplicationMVC/appsettings.json
+++ b/ApplicationMVC/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //"DefaultConnection": "Server=db8652.databaseasp.net; Database=db8652; User Id=db8652; Password=6t?R_3QmYk8!; Encrypt=False; MultipleActiveResultSets=True;"
     "DefaultConnection": "Data Source=Emad;Initial Catalog=LinkedGatesDB;Integrated Security=True;Trust Server Certificate=True"
   }
 }
